--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ html,body{
 	margin: 30px auto 30px auto;
 	padding: 20px;
 	border: 4px double #000;
-	background-color: wheat;
+	background-color: #faf0e6;
 }
 #logo{
 	margin: 10px auto 25px auto;
